--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,6 @@ gunicorn>=21.2,<22.0
 psycopg2-binary>=2.9,<3.0
 whitenoise>=6.7,<7.0
 django-environ>=0.11,<1.0
+dj-database-url>=2.2,<3.0
 supabase>=2.0.0
 requests>=2.32,<3.0
